feat: update highlight